[tool.poetry]
name = "link-engineering-interface"
version = "0.1.0"
description = "A small Python project using Tkinter for interactive windows."
authors = ["Your Name <you@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
tkinter = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.pytest.ini]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

